--- a/styles.css
+++ b/styles.css
@@ -26,8 +26,11 @@ header {
 }
 
 #nav_logo {
-  font-size: 24px;
-
+  font-size: 50px;
+  background-color: firebrick;
+  color: wheat;
+  border-radius: 0px 0px 10px 0px;
+  padding: 10px;
 }
 
 #nav_list {
@@ -40,12 +43,16 @@ header {
   text-decoration: none;
   color: #1d1d1dad;
   font-weight: 600;
+  font-size: 25px;
+  border-radius: 5px;
+  padding: 2px;
 }
 
 .nav_item a:hover {
-  color: firebrick;
+  color: wheat;
   border-radius: 4px;
   transition: ease-in-out 0.3s;
+  background-color: firebrick;
 }
 
 .parte1 {
@@ -112,4 +119,8 @@ img {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
+}
+
+ul {
+  margin-right: 30px;
 }
